--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "@typescript-eslint/eslint-plugin": "^7.0.0",
     "@typescript-eslint/parser": "^7.0.0",
     "chai": "^4.3.7",
+    "css-loader": "^7.1.2",
     "eslint": "^8.0.0",
     "eslint-config-prettier": "^9.0.0",
     "husky": "^9.0.0",
     "lint-staged": "^15.0.0",
     "mocha": "^10.0.0",
     "prettier": "^3.0.0",
+    "style-loader": "^4.0.0",
     "ts-loader": "^9.0.0",
     "ts-node": "^10.0.0",
     "typescript": "^5.0.0",
